--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -43,6 +43,10 @@
             $row-gutter-rem-increment: 1;
         }
 
+        // DEFAULTS/RESET
+
+        margin: 0;
+
         // HANDLE GUTTER PERCENTAGES
 
         @if ($highest-gutter-percentage > 0) {
@@ -159,6 +163,33 @@
                     }
                 }
             }
+
+            @if ($highest-gridcell-width-percentage > 0) {
+
+                @for $i from 0 through $highest-gridcell-width-percentage {
+
+                    &[#{$prefix}width-#{$i}-pct] {
+        
+                        @include sf-set-width (
+                            $width: $i * 1%
+                        );
+                    }
+
+                    &[#{$prefix}push-#{$i}-pct] {
+
+                        @include sf-push (
+                            $width: $i * 1%
+                        );
+                    }
+
+                    &[#{$prefix}pull-#{$i}-pct] {
+
+                        @include sf-pull (
+                            $width: $i * 1%
+                        );
+                    }
+                }
+            }
         }
     }
 }
@@ -211,13 +242,17 @@ body {
         $gridcell-width: one-whole
     );
 
+    $prefix: "";
+
     @each $breakpoint, $props in $media-breakpoints {
 
         @if (nth($props, 1) != false) {
 
             @if ($breakpoint == zero) {
 
-                @include sf-grid-init("sf-");
+                $prefix: "sf-";
+
+                @include sf-grid-init($prefix);
 
                 &[sf-reverse] {
 
@@ -238,7 +273,9 @@ body {
 
                 @include sf-media($from: $breakpoint) {
 
-                    @include sf-grid-init("sf-" + nth($props, 2) + "-");
+                    $prefix: "sf-" + nth($props, 2) + "-";
+
+                    @include sf-grid-init($prefix);
 
                     &[#{"sf-" + nth($props, 2) + "-not-reverse"}] {
 
