--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -8,6 +8,11 @@ you can use in your HTML attributes and SCSS code and significantly
 reduce or increase the size of your generated CSS.
 */
 
+// GRID COLUMN COUNT BASE.
+// This is the maximum number of columns supported.
+// The default is 24.
+$base-column-count: 24;
+
 // Gutters can be 0 to this value as a percentage.
 // Use the increment below to create a more granular range.
 // A smaller value yields smaller generated CSS code.
@@ -33,13 +38,6 @@ $highest-row-gutter-rem: 3;
 // A larger value yields smaller generated CSS code.
 // Use 1.0 to only use whole numbers.
 $row-gutter-rem-increment: 0.25;
-
-// Grid cell width percentage attributes can go from 0 to this number.
-// This also affects grid push and pull widths.
-// A smaller value yields smaller generated CSS code.
-// Set to 0 to disable.
-$highest-gridcell-width-percentage: 15;
-
 
 
 /* SIZES
