--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -20,7 +20,7 @@
     $use-reverse:false,
     $use-equal-heights:false,
 
-    $gridcell-width:false, // Grid cell widths (all the same; e.g. one-half)
+    $gridcell-width:false,     // Grid cell widths (all the same); number from 1-$base-column-count
     $gutter:false,             // Horizontal gutter (e.g. 5%, 3rem)
     $row-gutter:false,         // Bottom margin (gutter) when grid cells wrap, except for the last row (e.g. 3rem)
 
@@ -190,24 +190,9 @@
 
         $found: false;
 
-        @if str-index($gridcell-width, "-") {
+        @if (sf-get-unit($gcwidth) != "%") {
 
-            @each $frac, $widths in $grid-widths {
-    
-                @each $width in $widths {
-    
-                    @if ($width == $gridcell-width) {
-    
-                        $gcwidth: $frac * 100%;
-                        $found: true;
-                    }
-                }
-            }
-        }
-
-        @if (sf-get-unit($gridcell-width) == "%" or $found == false) {
-
-            $gcwidth: sf-strip-unit($gridcell-width) + unquote("%");
+            $gcwidth: sf-strip-unit($gridcell-width)/$base-column-count * 100%;
         }
 
         @if ($gutter != false) {
@@ -467,24 +452,9 @@
 
         $found: false;
 
-        @if (sf-get-unit($width) == "") {
+        @if (sf-get-unit($gcwidth) != "%") {
 
-            @each $frac, $widths in $grid-widths {
-    
-                @each $w in $widths {
-
-                    @if ($w == $width) {
-    
-                        $found: true;
-                        $gcwidth: $frac * 100%;
-                    }
-                }
-            }
-        }
-
-        @if (sf-get-unit($width) == "%" or $found == false) {
-
-            $gcwidth: sf-strip-unit($width) + unquote("%");
+            $gcwidth: sf-strip-unit($width)/$base-column-count * 100%;
         }
     }
 
@@ -578,110 +548,3 @@
     );
 }
 
-$grid-widths: (
-    1:      one-whole,
-
-    1/2:    one-half
-            two-quarters
-            three-sixths
-            four-eighths
-            five-tenths
-            six-twelfths,
-
-    1/3:    one-third
-            two-sixths
-            three-ninths
-            four-twelfths,
-
-    2/3:    two-thirds
-            four-sixths
-            six-ninths
-            eight-twelfths,
-
-    1/4:    one-quarter
-            two-eighths
-            three-twelfths,
-
-    3/4:    three-quarters
-            six-eighths
-            nine-twelfths,
-
-    1/5:    one-fifth
-            two-tenths,
-
-    2/5:    two-fifths
-            four-tenths,
-
-    3/5:    three-fifths
-            six-tenths,
-
-    4/5:    four-fifths
-            eight-tenths,
-
-    1/6:    one-sixth
-            two-twelfths,
-
-    5/6:    five-sixths
-            ten-twelfths,
-
-    // Sevenths
-    1/7:    one-seventh,
-    2/7:    two-sevenths,
-    3/7:    three-sevenths,
-    4/7:    four-sevenths,
-    5/7:    five-sevenths,
-    6/7:    six-sevenths,
-
-    // Eighths
-    1/8:    one-eighth,
-    3/8:    three-eighths,
-    5/8:    five-eighths,
-    7/8:    seven-eighths,
-
-    // Ninths
-    1/9:    one-ninth,
-    2/9:    two-ninths,
-    4/9:    four-ninths,
-    5/9:    five-ninths,
-    7/9:    seven-ninths,
-    8/9:    eight-ninths,
-    
-    // Tenths
-    1/10:   one-tenth,
-    3/10:   three-tenths,
-    7/10:   seven-tenths,
-    9/10:   nine-tenths,
-
-    // Elevenths
-    1/11:   one-eleventh,
-    2/11:   two-elevenths,
-    3/11:   three-elevenths,
-    4/11:   four-elevenths,
-    5/11:   five-elevenths,
-    6/11:   six-elevenths,
-    7/11:   seven-elevenths,
-    8/11:   eight-elevenths,
-    9/11:   nine-elevenths,
-    10/11:  ten-elevenths,
-    
-    //Twelfths
-    1/12:   one-twelfth,
-    5/12:   five-twelfths,
-    7/12:   seven-twelfths,
-    11/12:  eleven-twelfths
-);
-
-$grid-increments: (
-    one-whole,
-    one-half,
-    one-third,
-    one-quarter,
-    one-fifth,
-    one-sixth,
-    one-seventh,
-    one-eighth,
-    one-ninth,
-    one-tenth,
-    one-eleventh,
-    one-twelfth
-);
