--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -123,7 +123,7 @@ body {
                     &:nth-child(1) {
 
                         @include sf-set-width (
-                            $width: 4
+                            $width: 15%
                         );
     
                         margin-right: 1%;
