--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -7,6 +7,22 @@
 // MIXINS AND FUNCTIONS
 //-----------------------------------------------------------------------//
 
+$fractions: (
+
+    1:      one-whole,
+    1/2:    one-half,
+    1/3:    one-third,
+    2/3:    two-thirds,
+    1/4:    one-quarter,
+    3/4:    three-quarters,
+    1/6:    one-sixth,
+    5/6:    five-sixths,
+    1/8:    one-eighth,
+    3/8:    three-eighths,
+    5/8:    five-eighths,
+    7/8:    seven-eighths
+);
+
 @mixin sf-grid-init($prefix: false) {
 
     @if ($prefix != false) {
@@ -139,11 +155,34 @@
 
                 @for $i from 1 through $base-column-count {
 
-                    &[#{$prefix}col-#{$i}] {
-        
-                        @include sf-set-width (
-                            $width: $i/$base-column-count * 100%
-                        );
+                    $pct: $i/$base-column-count;
+                    $pctname: false;
+
+                    @each $fraction, $names in $fractions {
+
+                        @if ($fraction == $pct) {
+
+                            $pctname: nth($names, 1);
+                        }
+                    }
+
+                    @if ($pctname != false) {
+
+                        &[#{$prefix}col-#{$i}], &[#{$prefix}#{$pctname}] {
+            
+                            @include sf-set-width (
+                                $width: $i/$base-column-count * 100%
+                            );
+                        }
+
+                    } @else {
+
+                        &[#{$prefix}col-#{$i}] {
+            
+                            @include sf-set-width (
+                                $width: $i/$base-column-count * 100%
+                            );
+                        }
                     }
 
                     &[#{$prefix}push-#{$i}] {
