More forms content

--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1156,7 +1156,7 @@ form [sf-textbox][sf-filebox] [sf-wrapper] input[type="file"], form [sf-listbox]
 
 /* line 482, styleguide/scss/core/_core-forms.scss */
 form [sf-checkbox] label, form [sf-radio] label, [role="form"] [sf-checkbox] label, [role="form"] [sf-radio] label {
-  display: block;
+  display: inline-block;
   cursor: pointer;
   padding-left: 4rem;
   font-size: 0;
