--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -481,7 +481,7 @@ form, [role="form"] {
 
         label {
 
-            display: block;
+            display: inline-block;
             cursor: pointer;
             padding-left: 4rem;
             font-size: 0;
