Comment typo in colors.config

--- a/styleguide/scss/_config-colors.scss
+++ b/styleguide/scss/_config-colors.scss
@@ -6,7 +6,7 @@
 // Used to automatically set background, foreground, anchor, headline colors
 // on objects, allowing you to control the color scheme right here.
 //
-// (background, foreground, anchor, headlines)
+// (background, foreground, anchors, headlines)
 $base-colors: (
     black:             (#000000, #ffffff, #ffffff, #ffffff),
     white:             (#ffffff, #2b303a, #1f8dd6, #2b303a),
